--- a/index.html
+++ b/index.html
@@ -7,16 +7,25 @@
     <title>Instant Website Quote</title>
     <style>
         :root {
-            --bg: #f8fafc;
-            --card: #fff;
-            --heading: #1e293b;
-            --subheading: #334155;
-            --text: #475569;
-            --muted: #64748b;
-            --button: #64748b;
-            --button-hover: #475569;
+            --bg: #F0F2F5;
+            /* Primary */
+            --card: #E6E6FA;
+            /* Secondary */
+            --heading: #4B0082;
+            /* Text - Dark Purple */
+            --subheading: #4B0082;
+            /* Text - Dark Purple */
+            --text: #4B0082;
+            /* Text - Dark Purple */
+            --muted: #6A0DAD;
+            /* Accent - Vibrant Purple */
+            --button: #6A0DAD;
+            /* Accent - Vibrant Purple */
+            --button-hover: #4B0082;
+            /* Text - Dark Purple */
             --button-text: #fff;
-            --border: #e2e8f0;
+            --border: #E6E6FA;
+            /* Secondary */
         }
 
         html,
@@ -174,7 +183,7 @@
             padding: 0.7rem 0.3rem;
             border-radius: 0.5rem;
             cursor: pointer;
-            background: #f1f5f9;
+            background: #E6E6FA;
             color: var(--subheading);
             border: 2px solid transparent;
             transition: all 0.2s;
@@ -201,11 +210,11 @@
             display: flex;
             align-items: center;
             gap: 0.7rem;
-            background: #f1f5f9;
+            background: #E6E6FA;
             padding: 0.7rem 1rem;
             border-radius: 0.5rem;
             margin-bottom: 0.5rem;
-            border: 1.5px solid #e2e8f0;
+            border: 1.5px solid #E6E6FA;
             font-weight: 500;
             color: var(--subheading);
             font-size: 1rem;
@@ -231,7 +240,7 @@
             appearance: none;
             width: 100%;
             height: 8px;
-            background: #e2e8f0;
+            background: #E6E6FA;
             border-radius: 5px;
             outline: none;
         }
@@ -253,7 +262,7 @@
             color: var(--button);
             min-width: 60px;
             text-align: center;
-            background: #f1f5f9;
+            background: #E6E6FA;
             padding: 0.3rem 0.7rem;
             border-radius: 0.4rem;
         }
@@ -267,13 +276,13 @@
             font-size: 1rem;
             font-family: inherit;
             color: var(--subheading);
-            background: #f8fafc;
+            background: #F0F2F5;
             resize: vertical;
             margin-top: 0.2rem;
         }
 
         .quote-box {
-            background: #f1f5f9;
+            background: #E6E6FA;
             padding: 0.9rem 1.1rem;
             border-radius: 0.5rem;
             border: 1.5px solid var(--border);
@@ -284,7 +293,7 @@
             align-items: flex-start;
             box-sizing: border-box;
             overflow: hidden;
-            box-shadow: 0 2px 8px rgba(30, 41, 59, 0.07);
+            box-shadow: 0 2px 8px rgba(106, 13, 173, 0.07);
         }
 
         .quote-box .price-section {
