--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             <div class="contact">
                 <div class="contact-label">Contact</div>
                 <a class="contact-link" href="mailto:webdevbysai@gmail.com">contact@gmail.com</a>
-                <a class="contact-link" href="tel:5551234567">(555) 123-4567</a>
+                <a class="contact-link" href="tel:5551234567">(571) - 680 - 9860</a>
             </div>
         </div>
         <div class="form-section">
