Apply Modern Innovator palette and update contact info

--- a/index.html
+++ b/index.html
@@ -357,8 +357,8 @@
             <div class="promise">Up & Running in <span>48 Hours!</span></div>
             <div class="contact">
                 <div class="contact-label">Contact</div>
-                <a class="contact-link" href="mailto:webdevbysai@gmail.com">contact@gmail.com</a>
-                <a class="contact-link" href="tel:5551234567">(571) - 680 - 9860</a>
+                <a class="contact-link" href="mailto:webdevbysai@gmail.com">webdevbysai@gmail.com</a>
+                <a class="contact-link" href="tel:5716809860">571-680-9860</a>
             </div>
         </div>
         <div class="form-section">
