--- a/index.html
+++ b/index.html
@@ -330,6 +330,37 @@
             background: var(--button-hover);
         }
 
+        .feature-addon-row {
+            display: flex;
+            gap: 2rem;
+            width: 100%;
+            justify-content: space-between;
+            margin-bottom: 1.2rem;
+        }
+
+        .feature-addon-row .form-group {
+            flex: 1 1 0;
+            min-width: 0;
+            max-width: 48%;
+        }
+
+        .checkbox-group label {
+            font-size: 0.98rem;
+            padding: 0.5rem 0.7rem;
+            margin-bottom: 0.4rem;
+        }
+
+        @media (max-width: 900px) {
+            .feature-addon-row {
+                flex-direction: column;
+                gap: 0.5rem;
+            }
+
+            .feature-addon-row .form-group {
+                max-width: 100%;
+            }
+        }
+
         @media (max-width: 1100px) {
             .container {
                 flex-direction: column;
@@ -373,40 +404,42 @@
                         <label for="custom">Custom Design & Build</label>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label>2. Advanced Features (One-Time)</label>
-                    <div class="checkbox-group">
-                        <label><input type="checkbox" name="features" value="1250"> E-commerce Functionality</label>
-                        <label><input type="checkbox" name="features" value="1000"> Database & User Logins</label>
-                        <label><input type="checkbox" name="features" value="375"> Advanced Animations & UX</label>
+                <div class="feature-addon-row">
+                    <div class="form-group">
+                        <label>2. Advanced Features (One-Time)</label>
+                        <div class="checkbox-group">
+                            <label><input type="checkbox" name="features" value="1250"> E-commerce Functionality</label>
+                            <label><input type="checkbox" name="features" value="1000"> Database & User Logins</label>
+                            <label><input type="checkbox" name="features" value="375"> Advanced Animations & UX</label>
+                        </div>
                     </div>
-                </div>
-                <div class="form-group">
-                    <label>2b. Add-on Services <span
-                            style="font-weight:400; color:var(--muted); font-size:0.95em;">(optional)</span></label>
-                    <div class="checkbox-group" id="addon-services">
-                        <label><input type="checkbox" name="addons" value="400"> SEO Optimization <span
-                                class="info-icon" data-info="seo">&#9432;</span></label>
-                        <label><input type="checkbox" name="addons" value="600"> Blog/CMS <span class="info-icon"
-                                data-info="blog">&#9432;</span></label>
-                        <label><input type="checkbox" name="addons" value="250"> Social Media Integration <span
-                                class="info-icon" data-info="social">&#9432;</span></label>
-                        <label><input type="checkbox" name="addons" value="300"> Newsletter/Email Marketing Integration
-                            <span class="info-icon" data-info="newsletter">&#9432;</span></label>
-                        <label><input type="checkbox" name="addons" value="200"> Custom Contact Forms <span
-                                class="info-icon" data-info="contactform">&#9432;</span></label>
-                        <label><input type="checkbox" name="addons" value="150"> Analytics Setup <span class="info-icon"
-                                data-info="analytics">&#9432;</span></label>
-                        <label><input type="checkbox" name="addons" value="500"> Multi-language Support <span
-                                class="info-icon" data-info="multilang">&#9432;</span></label>
-                        <label><input type="checkbox" name="addons" value="350"> Accessibility Improvements <span
-                                class="info-icon" data-info="accessibility">&#9432;</span></label>
-                        <label><input type="checkbox" name="addons" value="300"> Performance Optimization <span
-                                class="info-icon" data-info="performance">&#9432;</span></label>
-                        <label><input type="checkbox" name="addons" value="150"> Logo/Branding Design <span
-                                class="info-icon" data-info="logo">&#9432;</span></label>
-                        <label><input type="checkbox" name="addons" value="100"> Copywriting (per page) <span
-                                class="info-icon" data-info="copywriting">&#9432;</span></label>
+                    <div class="form-group">
+                        <label>2b. Add-on Services <span
+                                style="font-weight:400; color:var(--muted); font-size:0.95em;">(optional)</span></label>
+                        <div class="checkbox-group" id="addon-services">
+                            <label><input type="checkbox" name="addons" value="400"> SEO Optimization <span
+                                    class="info-icon" data-info="seo">&#9432;</span></label>
+                            <label><input type="checkbox" name="addons" value="600"> Blog/CMS <span class="info-icon"
+                                    data-info="blog">&#9432;</span></label>
+                            <label><input type="checkbox" name="addons" value="250"> Social Media Integration <span
+                                    class="info-icon" data-info="social">&#9432;</span></label>
+                            <label><input type="checkbox" name="addons" value="300"> Newsletter/Email Marketing
+                                Integration <span class="info-icon" data-info="newsletter">&#9432;</span></label>
+                            <label><input type="checkbox" name="addons" value="200"> Custom Contact Forms <span
+                                    class="info-icon" data-info="contactform">&#9432;</span></label>
+                            <label><input type="checkbox" name="addons" value="150"> Analytics Setup <span
+                                    class="info-icon" data-info="analytics">&#9432;</span></label>
+                            <label><input type="checkbox" name="addons" value="500"> Multi-language Support <span
+                                    class="info-icon" data-info="multilang">&#9432;</span></label>
+                            <label><input type="checkbox" name="addons" value="350"> Accessibility Improvements <span
+                                    class="info-icon" data-info="accessibility">&#9432;</span></label>
+                            <label><input type="checkbox" name="addons" value="300"> Performance Optimization <span
+                                    class="info-icon" data-info="performance">&#9432;</span></label>
+                            <label><input type="checkbox" name="addons" value="150"> Logo/Branding Design <span
+                                    class="info-icon" data-info="logo">&#9432;</span></label>
+                            <label><input type="checkbox" name="addons" value="100"> Copywriting (per page) <span
+                                    class="info-icon" data-info="copywriting">&#9432;</span></label>
+                        </div>
                     </div>
                 </div>
                 <div id="addon-info-box"
