the final design mostly

--- a/index.html
+++ b/index.html
@@ -117,14 +117,14 @@
                     <div class="space-y-4">
                         <label
                             class="block p-4 bg-gray-800/50 rounded-lg border border-gray-700 cursor-pointer has-[:checked]:border-white has-[:checked]:bg-gray-700/50 transition-all">
-                            <input type="radio" name="foundation" value="template" class="sr-only" data-price="400"
+                            <input type="radio" name="foundation" value="template" class="sr-only" data-price="600"
                                 checked>
                             <h3 class="text-lg font-bold">Template-Based Site</h3>
                             <p class="text-gray-400 mt-1 text-sm">Fast, affordable, and simple.</p>
                         </label>
                         <label
                             class="block p-4 bg-gray-800/50 rounded-lg border border-gray-700 cursor-pointer has-[:checked]:border-white has-[:checked]:bg-gray-700/50 transition-all">
-                            <input type="radio" name="foundation" value="custom" class="sr-only" data-price="1500">
+                            <input type="radio" name="foundation" value="custom" class="sr-only" data-price="1250">
                             <h3 class="text-lg font-bold">Custom Design & Build</h3>
                             <p class="text-gray-400 mt-1 text-sm">Unique, tailored, and scalable.</p>
                         </label>
@@ -139,21 +139,21 @@
                             class="flex items-center p-3 bg-gray-800/50 rounded-lg border border-gray-700 cursor-pointer hover:border-gray-500 transition-all">
                             <input type="checkbox" name="advanced" value="ecommerce"
                                 class="h-5 w-5 rounded bg-gray-700 border-gray-600 text-white focus:ring-white"
-                                data-price="750">
+                                data-price="800">
                             <span class="ml-3">E-commerce Functionality</span>
                         </label>
                         <label
                             class="flex items-center p-3 bg-gray-800/50 rounded-lg border border-gray-700 cursor-pointer hover:border-gray-500 transition-all">
                             <input type="checkbox" name="advanced" value="database"
                                 class="h-5 w-5 rounded bg-gray-700 border-gray-600 text-white focus:ring-white"
-                                data-price="1000">
+                                data-price="850">
                             <span class="ml-3">Database & User Logins</span>
                         </label>
                         <label
                             class="flex items-center p-3 bg-gray-800/50 rounded-lg border border-gray-700 cursor-pointer hover:border-gray-500 transition-all">
                             <input type="checkbox" name="advanced" value="animations"
                                 class="h-5 w-5 rounded bg-gray-700 border-gray-600 text-white focus:ring-white"
-                                data-price="375">
+                                data-price="500">
                             <span class="ml-3">Advanced Animations & UX</span>
                         </label>
                     </div>
@@ -199,7 +199,7 @@
                         <div class="flex justify-around items-center gap-4 mb-4">
                             <div class="text-center">
                                 <h3 class="text-md font-semibold text-gray-600">One-Time Cost</h3>
-                                <p id="one-time-cost" class="text-3xl font-bold">$400</p>
+                                <p id="one-time-cost" class="text-3xl font-bold">$600</p>
                             </div>
                             <div class="w-px h-12 bg-gray-200"></div>
                             <div class="text-center">
@@ -222,15 +222,15 @@
             // --- DATA ---
             const addOnServices = [
                 { id: 'seo', name: 'SEO Optimization', price: 300, description: 'Improve your visibility on search engines like Google.', benefit: 'Attract more organic traffic and potential customers.' },
-                { id: 'blog', name: 'Blog/CMS', price: 250, description: 'A full-featured blog or content management system to publish articles.', benefit: 'Establish authority and engage your audience with fresh content.' },
-                { id: 'social', name: 'Social Media Integration', price: 125, description: 'Display live feeds from your social media profiles on your site.', benefit: 'Increase social engagement and keep content dynamic.' },
+                { id: 'blog', name: 'Blog/CMS', price: 350, description: 'A full-featured blog or content management system to publish articles.', benefit: 'Establish authority and engage your audience with fresh content.' },
+                { id: 'social', name: 'Social Media Integration', price: 150, description: 'Display live feeds from your social media profiles on your site.', benefit: 'Increase social engagement and keep content dynamic.' },
                 { id: 'newsletter', name: 'Newsletter Integration', price: 150, description: 'Integrate with services like Mailchimp for email marketing.', benefit: 'Build and nurture your email list directly from your site.' },
                 { id: 'forms', name: 'Custom Contact Forms', price: 100, description: 'Create advanced forms with file uploads, conditional logic, etc.', benefit: 'Streamline data collection and improve user interaction.' },
-                { id: 'analytics', name: 'Analytics Setup', price: 75, description: 'Install and configure analytics tools like Google Analytics 4.', benefit: 'Gain valuable insights into your website traffic and user behavior.' },
-                { id: 'multilang', name: 'Multi-language Support', price: 450, description: 'Allow users to switch between different languages on your site.', benefit: 'Reach a global audience and cater to international markets.' },
-                { id: 'accessibility', name: 'Accessibility Improvements', price: 350, description: 'Enhance your site to meet WCAG standards for users with disabilities.', benefit: 'Ensure an inclusive experience for all users and avoid legal risks.' },
-                { id: 'logo', name: 'Logo/Branding Design', price: 600, description: 'A complete branding package including a new logo and style guide.', benefit: 'Create a strong, memorable, and professional brand identity.' },
-                { id: 'copywriting', name: 'Copywriting (per page)', price: 125, description: 'Professionally written content for one page of your website.', benefit: 'Communicate your message clearly and persuasively to drive action.' },
+                { id: 'analytics', name: 'Analytics Setup', price: 100, description: 'Install and configure analytics tools like Google Analytics 4.', benefit: 'Gain valuable insights into your website traffic and user behavior.' },
+                { id: 'multilang', name: 'Multi-language Support', price: 225, description: 'Allow users to switch between different languages on your site.', benefit: 'Reach a global audience and cater to international markets.' },
+                { id: 'accessibility', name: 'Accessibility Improvements', price: 150, description: 'Enhance your site to meet WCAG standards for users with disabilities.', benefit: 'Ensure an inclusive experience for all users and avoid legal risks.' },
+                { id: 'logo', name: 'Logo/Branding Design', price: 250, description: 'A complete branding package including a new logo and style guide.', benefit: 'Create a strong, memorable, and professional brand identity.' },
+                { id: 'copywriting', name: 'Copywriting (per page)', price: 100, description: 'Professionally written content for one page of your website.', benefit: 'Communicate your message clearly and persuasively to drive action.' },
             ];
 
             // --- ELEMENTS ---
@@ -327,7 +327,7 @@
                 body += `Monthly Retainer: ${monthlyCostEl.textContent}\n\n`;
                 body += "I look forward to discussing this further.\n\nBest regards,";
 
-                window.location.href = `mailto:webdevbysai@gmail.com?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
+                window.location.href = `mailto:developer@example.com?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
             });
 
             // --- RUN ON LOAD ---
